# template-qt5-cmake

./: CMakeLists.txt  README.md
src/: main.cpp
